# advent-of-code-2021

./: .gitignore  readme.md
01/: x01.cabal
01/app/: part1.hs  part2.hs
02/: day02.js  x02.cabal
02/app/: part1.hs  part2.hs
03/: x03.cabal
03/app/: part1.hs  part2.hs
03/src/: main.rs
04/: day04.cabal  x04.cabal
04/app/: part1.hs  part2.hs
05/: sampleinput.txt  x05.cabal
05/app/: part1.hs  part2.hs
06/: x06.cabal
06/app/: part1.hs  part2.hs
07/: x07.cabal
07/app/: part1.hs  part2.hs
08/: x08.cabal
08/app/: part1.hs  part2.hs
09/: x09.cabal
09/app/: part1.hs  part2.hs
10/src/: part1.rs  part2.rs
11/src/: part1.rs  part2.rs
12/src/: part1.rs  part2.rs
13/src/: part1.rs  part2.rs
14/: Cargo.toml
14/src/: part1.rs  part2.rs
15/: Cargo.toml
15/src/: part1.rs  part2.rs
16/: Cargo.toml
16/src/: part1.rs  part2.rs
17/: Cargo.toml
17/src/: part1.rs  part2.rs
18/: Cargo.toml
18/src/: part1.rs  part2.rs
19/: Cargo.toml
19/src/: part1.rs  part2.rs
20/: Cargo.toml
20/src/: part1.rs  part2.rs
21/src/: part1.rs  part2.rs
22/: Cargo.toml
22/src/: part1.rs  part2.rs
23/: Cargo.toml
23/src/: part1.rs  part2.rs
day01/: day01.js
day03/src/: main.rs
day04/: .sosrc  day04.cabal
day04/app/: part1.hs  part2.hs
day05/: day05.cabal
day06/: day06.cabal
day06/app/: part2.hs
