cabal-version:      2.4
name:               day04
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Eero Lehtinen
maintainer:         eero@eerolehtinen.fi

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable part1
    main-is:          part1.hs
    build-depends: base ^>=4.16.1.0, text
    hs-source-dirs:   app
    default-language: Haskell2010

executable part2
    main-is:          part2.hs
    build-depends: base ^>=4.16.1.0, text
    hs-source-dirs:   app
    default-language: Haskell2010
